--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&amp;family=Poppins:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
 
 <link href="css/style.css" rel="stylesheet">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5165677509292344"
+     crossorigin="anonymous"></script>
 <link href="css/responsive.css" rel="stylesheet">
 <link href="css/darkmode.css" rel="stylesheet">
 <style>
@@ -165,7 +167,7 @@
   <a href="https://themeforest.net/item/niwax-web-design-digital-marketing-agency-html-template/27112946" class="niwax-btn3"><i class="fa fa-user-plus"></i> Hire Now</a>
 </div>
 <br>
-<div class="fm1"><img src="IMG-20231214-WA0020.jpg" style="height: 350px !important; width: 300px;"alt="img"></div>  
+<div class="fm1"><img src="IMG-20231214-WA0020.jpg" style="height: 250px !important; width: 200px; border-radius: 5px;"alt="img"></div>  
    </div>
   </div>
   <div class="col-lg-5">
